@@ -66,81 +66,32 @@
         </dependency>
     </dependencies>    
     <build>
-        <plugins>            
+        <plugins>         
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>3.4</version>
-                <configuration>
-                    <reportPlugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-project-info-reports-plugin</artifactId>
-                            <version>2.8</version>
-                            <reportSets>
-                                <reportSet>
-                                    <reports></reports>
-                                </reportSet>
-                            </reportSets>
-                        </plugin>
-                        <plugin>
-                            <groupId>com.stratio.maven</groupId>
-                            <artifactId>sphinx-maven-plugin</artifactId>
-                            <version>2.0.0</version>
-                            <configuration>
-                                <fork>true</fork>
-                                <argLine>-Xmx256m -XX:MaxPermSize=128m</argLine>
-                                <builders>
-                                    <entry>html</entry>
-                                </builders>
-                                <resources>
-                                    <resource>
-                                        <directory>src/site/sphinx</directory>
-                                        <filtering>true</filtering>
-                                        <includes>
-                                            <include>conf.py</include>
-                                        </includes>
-                                    </resource>
-                                </resources>
-                            </configuration>
-                        </plugin>
-                        <!--                        <plugin>
-                            <groupId>com.stratio.maven</groupId>
-                            <artifactId>sphinx-maven-plugin</artifactId>
-                            <version>2.0.0</version>
-                            <configuration>
-                                <fork>true</fork>
-                                <argLine>-Xmx256m -XX:MaxPermSize=128m</argLine>
-                                <builders>
-                                    <entry>pdf</entry>
-                                </builders>
-                                <outputDirectory>${project.reporting.outputDirectory}/pdf</outputDirectory>
-                            </configuration>
-                        </plugin>-->
-                    </reportPlugins>
-                </configuration>
-            </plugin>
-            <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>     
+<!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9.1</version>
-                <configuration>
-                    <doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
-
-                    <!-- <docletPath>/path/to/UmlGraph.jar</docletPath> -->
-                    <docletArtifact>
-                        <groupId>org.umlgraph</groupId>
-                        <artifactId>umlgraph</artifactId>
-                        <version>5.6.6</version>
-                    </docletArtifact>
-                    <additionalparam>
-                        -inferrel -inferdep -quiet -hide java.* -hide org.eclipse.* -collpackages java.util.* -postfixpackage
-                        -nodefontsize 9 -nodefontpackagesize 7 -attributes -types -visibility -operations -constructors
-                        -enumerations -enumconstants -views
-                    </additionalparam>
-                    <useStandardDocletOptions>true</useStandardDocletOptions>
-                </configuration>
-            </plugin>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>-->
+           
         </plugins>
     </build>
 </project>
